--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             // --- INTRODUCTION & BRANDING FIELDS ---
             photoUrl: "file:///C:/Users/rigsb/OneDrive/Desktop/thumbnail_IMG_7123.jpg", // Replace with a URL to a professional headshot
             logoUrl: "file:///C:/Users/rigsb/OneDrive/Desktop/Screenshot%202025-11-12%20155750.png", // URL for your school logo or personal brand icon
-            personalBio: "I am a sophomore driven by the intersection of computational thinking and creative design. My academic focus is on building scalable, user-centric web applications and leveraging data analysis to inform design decisions. I believe in continuous learning and applying classroom theory to immediate, impactful real-world challenges.",
-            missionStatement: "To build digital solutions that simplify complex processes and empower small businesses, leveraging Python, front-end frameworks, and a user-first design approach.",
+            personalBio: "I am a Freshman in Finance who is motivated by in-depth thinking and learning more about financial situations among companies and to learn more about risk management with investments.",
+            missionStatement: "To never stop learning about the future of finance and how it impacts society.",
         };
 
         /*
@@ -279,11 +279,11 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
 
         // 1.2 ACADEMICS (REQUIRED: Add relevant classes)
         const academicData = [
-            { name: "Intro to Python Programming", grade: "A", semester: "Fall 2024", relevance: "Code" },
-            { name: "Digital Design Principles", grade: "A-", semester: "Fall 2024", relevance: "Design" },
-            { name: "Calculus I", grade: "B+", semester: "Fall 2024", relevance: "Foundational" },
-            { name: "Web Development (Front-End)", grade: "A", semester: "Spring 2025", relevance: "Code" },
-            { name: "Data Structures", grade: "In Progress", semester: "Current", relevance: "Code" },
+            { name: "ISOM 210", grade: "A", semester: "Fall 2025", relevance: "Business Systems" },
+            { name: "ISOM 249", grade: "A", semester: "Fall 2025", relevance: "Business Communication" },
+            { name: "Intro to Miller College of Business 100", grade: "A", semester: "Fall 2025", relevance: "Business" },
+            { name: "Future Technology Innovations", grade: "A", semester: "Fall 2025", relevance: "Future of AI" },
+           
         ];
 
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
@@ -576,5 +576,6 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
