--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             impactScoreMultiplier: 10, // Adjusts how much projects/awards count towards total impact
             
             // --- INTRODUCTION & BRANDING FIELDS ---
-            photoUrl: "file:///C:/Users/rigsb/OneDrive/Desktop/thumbnail_IMG_7123.jpg", // Replace with a URL to a professional headshot
+            photoUrl: "thumbnail_IMG_7123.jpg", // Replace with a URL to a professional headshot
             logoUrl: "file:///C:/Users/rigsb/OneDrive/Desktop/Screenshot%202025-11-12%20155750.png", // URL for your school logo or personal brand icon
             personalBio: "I am a Freshman in Finance who is motivated by in-depth thinking and learning more about financial situations among companies and to learn more about risk management with investments.",
             missionStatement: "To never stop learning about the future of finance and how it impacts society.",
@@ -576,6 +576,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
