--- a/index.html
+++ b/index.html
@@ -289,40 +289,40 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
         // 1.3 PROJECTS (REQUIRED: Follow C-S-R format)
         const projectData = [
             {
-                title: "Local Charity Website Redesign",
-                category: "Design",
-                challenge: "The local Humane Society site was not mobile-friendly, resulting in high bounce rates on the donation page.",
-                solution: "Designed and implemented a responsive, user-centered interface using HTML, Tailwind CSS, and vanilla JS.",
-                result: "Increased mobile conversion rate by **15%** and reduced bounce rate by **22%** in the first month.",
-                link: "https://github.com/riley/charity-site"
+                title: "Making a Budget(Personal)",
+                category: "Problem Solving",
+                challenge: "Spending paychecks as they came in and didn't save any money for a few weeks.",
+                solution: "Created a budget in the notes app that tracked the percentage of saving and spending.",
+                result: "Not as much money out of my paycheck is spent on useless things.",
+                link: 
             },
             {
-                title: "Twitter Sentiment Analyzer (Academic)",
-                category: "Code",
-                challenge: "Required to analyze public sentiment towards a political topic using programming tools for a final project.",
-                solution: "Used Python (Pandas/Matplotlib) to clean data and built a basic Naive Bayes classification model.",
-                result: "Achieved **82%** accuracy in classifying positive/negative tweets, earning the highest grade in the class (A).",
-                link: ""
+                title: "Understanding Stocks(Academic)",
+                category: "Analytics",
+                challenge: "Understand why stocks can go up or down.",
+                solution: "Picked 10 stocks from the SNP 500 to try to get a good understanding of why they can go up or down.",
+                result: "Gained a better understanding of the stock market.",
+                link: 
             },
             {
-                title: "3D Planet Rendering",
-                category: "Code/Personal",
-                challenge: "A personal challenge to learn a new visualization library (three.js) over winter break.",
-                solution: "Created a simple animated model of a rotating planet using three.js, demonstrating coordinate system mastery.",
-                result: "Successfully rendered complex geometry and optimized the animation loop to maintain **60 FPS** on desktop browsers.",
-                link: "https://riley.github.io/planet-render"
+                title: "Created a Schedule(Personal)",
+                category: "Schedule/Routine",
+                challenge: "Struggled early on in college with keeping track with my assignments.",
+                solution: "Made a specific time for when I would do assignments for each class and when I would do other things.",
+                result: "Zero missed assignments since this change.",
+                link: 
             }
         ];
 
         // 1.4 EXPERIENCE & AWARDS (REQUIRED)
         const recognitionData = {
             experience: [
-                { title: "Team Lead, Ball State Hackathon", type: "Extracurricular", duration: "Oct 2025", detail: "Led a four-person team to develop a functional prototype in **24 hours**." },
-                { title: "Library Volunteer (IT Support)", type: "Community Service", duration: "Jan - May 2025", detail: "Provided **40+ hours** of technical support for public computers and staff devices." },
+                { title: "Team Captain, New Palestine Track and Field Team", type: "Extracurricular", duration: "Feb 2025 - June 2025", detail: "Was a leader of the track team." },
+                { title: "Dragon Flyer Volunteer", type: "Community Service", duration: "Mar 2025 - Apr 2025", detail: "Provided 20+ hours to teach kids how to run a race." },
             ],
             awards: [
-                { title: "Dean's List", duration: "Fall 2024", detail: "Achieved a **3.8 GPA**." },
-                { title: "Rising Star Freshman Award", duration: "Spring 2025", detail: "Recognized by the CS department for high academic achievement and engagement." },
+                { title: "Academic A List", duration: "Fall 2025", detail: "Was on the Academic A list in High School" },
+                { title: "National Honor's Society", duration: "Spring 2024", detail: "Was chose to be on the National Honor's Society list at my High School" },
             ]
         };
 
@@ -576,6 +576,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
