--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
                 challenge: "Spending paychecks as they came in and didn't save any money for a few weeks.",
                 solution: "Created a budget in the notes app that tracked the percentage of saving and spending.",
                 result: "Not as much money out of my paycheck is spent on useless things.",
-                link: 
+                link: ""
             },
             {
                 title: "Understanding Stocks(Academic)",
@@ -302,7 +302,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
                 challenge: "Understand why stocks can go up or down.",
                 solution: "Picked 10 stocks from the SNP 500 to try to get a good understanding of why they can go up or down.",
                 result: "Gained a better understanding of the stock market.",
-                link: 
+                link: ""
             },
             {
                 title: "Created a Schedule(Personal)",
@@ -310,7 +310,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
                 challenge: "Struggled early on in college with keeping track with my assignments.",
                 solution: "Made a specific time for when I would do assignments for each class and when I would do other things.",
                 result: "Zero missed assignments since this change.",
-                link: 
+                link: ""
             }
         ];
 
@@ -576,6 +576,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
 
